# AI_Question

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_log.txt  run_wrapper.py  topics.js
config/: __init__.py  prompts.py  settings.py  topics.py
docs/: DEVELOP.md
graph/: __init__.py  workflow.py
input/: task_001.json
io_/: __init__.py  input_loader.py  output_writer.py
nodes/: __init__.py  arbiter.py  formatter.py  generator.py  math_verifier.py  merger.py  parser.py  physics_verifier.py
src/agents/: __init__.py  arbiter.py  problem_generator.py  reviewers.py  solution_generator.py
src/app/: __init__.py
src/client/: __init__.py  base.py  openai_compat.py  openrouter.py
src/config/: config.py  settings.py
src/engine/: __init__.py  state_machine.py
src/formatter/: formatter.py  merger.py  parser.py
src/generator/: arbiter.py  generator.py  math_verifier.py  physics_verifier.py
src/integration/: __init__.py  ai_reviewer.py  feedback.py
src/latex/: __init__.py  format.py  isolate.py  merge.py  template_agent.py
src/model/: __init__.py  schema.py  state.py
src/prompts/: __init__.py  arbiter.yaml  formatter.yaml  generator.yaml  planning.yaml  problem_generator.yaml  reviewers.yaml  solution_generator.yaml  verifier.yaml
src/reader/: __init__.py  base.py  pdf_reader.py  problem_reader.py  text_reader.py  web_reader.py
src/spec/: __init__.py  normalizer.py  planner.py  task.py
src/utils/: __init__.py  files.py
state/: __init__.py  schema.py
tests/: __init__.py  test_graph.py  test_merger.py  test_parser.py  test_state_machine.py
utils/: run_stats.py
