[project]
name = "physics-generator"
version = "0.1.0"
description = "基于多 Agent 编排的 CPhO 物理竞赛题全自动生成与审核系统"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
physics-generator = "app:_cli"

# 可选外部依赖：`ai-reviewer` 是独立 CLI 工具（项目 CPHOS/AI_Reviewer），
# 通过 subprocess 调用；未安装时 `src/integration/ai_reviewer.py` 会给出
# 安装指引并跳过外部审题，主流程不受影响。
# 此处保留占位以便未来若发布到 PyPI 时可通过 `uv pip install .[review]` 安装。
[project.optional-dependencies]
review = []

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/app",
    "src/client",
    "src/config",
    "src/engine",
    "src/spec",
    "src/agents",
    "src/latex",
    "src/integration",
    "src/utils",
    "src/model",
    "src/prompts",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
